# gradio-fastapi-auth0-demo

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md
gradio_app/: main.py  pyproject.toml
main_app/: main.py  pyproject.toml
main_app/templates/: base.html  error.html  index.html
